<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sigpwned.espresso</groupId>
    <artifactId>espresso</artifactId>
    <version>0.0.0-SNAPSHOT</version>
    <name>espresso</name>
    <description>Streamlined Java Beans for Modern Java</description>
    <url>https://github.com/sigpwned/espresso</url>
    <packaging>jar</packaging>

    <scm>
        <connection>scm:git:git://github.com/sigpwned/espresso.git</connection>
        <developerConnection>scm:git:ssh://github.com/sigpwned/espresso.git</developerConnection>
        <url>https://github.com/sigpwned/espresso/tree/main</url>
    </scm>

    <developers>
        <developer>
            <name>Andy Boothe</name>
            <email>andy.boothe@gmail.com</email>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <sonar.organization>sigpwned</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>

        <slf4j.version>1.7.36</slf4j.version>
        <junit.version>4.13.2</junit.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
